---
title: Chat Context Class Diagram
date: 2025-04-27
---

%% Diagrama de clases del contexto chat
classDiagram
    %% Entidad principal Chat
    class Chat {
        - ChatId id
        - Status status
        - Participants participants
        - LastMessage lastMessage
        - LastMessageAt lastMessageAt
        - CreatedAt createdAt
        + static fromPrimitives(params)
        + static createPendingChat(params)
        + asignCommercial(commercial)
        + canAddMessage(message)
        + confirmChat()
        + updateParticipantOnlineStatus(participantId, isOnline)
        + toPrimitives()
    }

    class Participants {
        - Participant[] _participants
        + static create(participants)
        + addParticipant(id, name, isCommercial, isVisitor)
        + removeParticipant(id)
        + getParticipant(id)
        + setLastSeenAt(id, lastSeenAt)
        + updateParticipant(updatedParticipant)
        + value
    }

    class Participant {
        + id: string
        + name: string
        + isCommercial: boolean
        + isVisitor: boolean
        + isOnline: boolean
        + assignedAt: Date
        + lastSeenAt: Date | null
        + static create(params)
        + setLastSeenAt(lastSeenAt)
        + updateOnlineStatus(isOnline)
    }

    class Message {
        - MessageId id
        - ChatId chatId
        - SenderId senderId
        - Content content
        - CreatedAt createdAt
        + static fromPrimitives(params)
        + static create(params)
        + toPrimitives()
    }

    %% Value Objects
    class ChatId
    class Status
    class LastMessage
    class LastMessageAt
    class CreatedAt
    class MessageId
    class SenderId
    class Content

    %% Relaciones
    Chat --> Participants
    Participants --> Participant
    Chat --> ChatId
    Chat --> Status
    Chat --> LastMessage
    Chat --> LastMessageAt
    Chat --> CreatedAt
    Message --> MessageId
    Message --> ChatId
    Message --> SenderId
    Message --> Content
    Message --> CreatedAt
